# liven

./: .dockerignore  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.bench  EMBEDDING.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_FUZZ.md  LICENSE-COMMERCIAL  LICENSE-SSPL  README.md  RELEASE.md  appdmg.json  build.rs  install.sh  kondadb.rb  kondadb.service  kondadb.toml  liven.key  liven.rb  liven.service  liven.status  liven.toml  run-bench.sh  rust-crate-api.md  setup.sh  test_import_export.sh  test_stream_field_validation.sh
.cargo/: config.toml
.github/workflows/: build.yml  docker.yml  install.yml
benches/: engine_bench.rs
debian/: postinst  postrm  prerm
scripts/: com.livendb.liven.plist  install-linux.sh  install-macos.sh  install-windows.ps1  install.sh  pre-push.sh
src/: cli.rs  client.rs  codec.rs  config.rs  embed.rs  error.rs  executor.rs  import_export.rs  lib.rs  main.rs  parser.rs  query.rs  rust-crate-api.md  security.rs  server.rs  storage.rs  sysinfo.rs  tui.rs  types.rs
src/storage/: key.rs  ring_buffer.rs  timestamp_index.rs
tests/: auto_ram_detection_tests.rs  client_protocol_tests.rs  executor_tests.rs  fuzz_tests.proptest-regressions  fuzz_tests.rs  generate_sample_data.rs  import_export_tests.rs  object_storage_test.rs  parser_edge_cases_tests.rs  parser_tests.rs  query_syntax_tests.rs  resource_management_tests.rs  safety_tests.rs  security_config_tests.rs  security_tests.rs  storage_tests.rs  tombstone_compaction_tests.rs  vector_tests.rs  ztna_single_port_tests.rs
ui/: index.html  package-lock.json  package.json  tailwind.config.js  test_theme_switch.html  vite.config.ts
ui/src/: App.tsx  global.d.ts  index.css  types.ts
ui/src/components/: CodeBlock.tsx  GraphView.tsx  Navbar.tsx  PrettifiedGridView.tsx  QueryGuideModal.tsx  RowExpand.tsx  TableExpandRow.tsx  TelemetryChart.tsx
ui/src/constants/: samples.ts
ui/src/pages/: Dashboard.tsx  Login.tsx  QueryConsole.tsx  Security.tsx  StreamExplorer.tsx
ui/src/utils/: api.ts  requests.ts  theme.ts
wix/: main.wxs
