[package]
name = "liven"
version = "0.0.1"
edition = "2024"

[lib]
name = "liven"
path = "src/lib.rs"

[[bin]]
name = "liven"
path = "src/main.rs"


[dependencies]
tokio = { version = "1.38", features = ["full"] }
tokio-util = { version = "0.7.11", features = ["codec"] }
bytes = "1.6"
axum = { version = "0.7.5", features = ["ws"] }
tower-http = { version = "0.5.2", features = ["cors", "fs"] }
crossbeam-skiplist = "0.1.3"
ordered-float = { version = "4.2.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "1.3.0"
rust-embed = "8.4.0"
mime_guess = "2.0.4"
crc32fast = "1.4.2"
fs2 = "0.4.3"
csv = "1.3.0"
futures-util = "0.3.30"
nom = "7.1.3"
thiserror = "1.0.61"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
rand = "0.8.5"
ratatui = "0.26"
crossterm = "0.27"
config = { version = "0.14.0", features = ["toml"] }
blake3 = "1.5"
subtle = "2.5"
tokio-rustls = "0.26.0"
rustls-pemfile = "2.1.0"
x509-parser = "0.16.0"




[profile.release]
opt-level = 3             # Maximize binary size minimization patterns
lto = true                # Force Link-Time Optimization boundaries across all crates
codegen-units = 1         # Drop compilation speed parallelisms to maximize LTO coverage
panic = "abort"           # Drop stack unwinding metadata strings
strip = true              # Automatically strip out all symbol arrays and debug paths

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.5.0"

[[bench]]
name = "engine_bench"
harness = false

[package.metadata.deb]
maintainer = "LIVEN Maintainers <team@liven.io>"
copyright = "2026, LIVEN Maintainers <team@liven.io>"
license = "MIT"
section = "database"
priority = "optional"
assets = [
    ["target/release/liven", "usr/local/bin/liven", "755"],
    ["liven.toml", "etc/liven/liven.toml", "644"],
    ["liven.service", "lib/systemd/system/liven.service", "644"]
]
conf-files = ["/etc/liven/liven.toml"]
maintainer-scripts = "debian"

[package.metadata.generate-rpm]
summary = "LIVEN High-Performance Storage Engine"
description = "High-performance storage engine with ZTNA and mTLS support"
license = "MIT"
release = "1"
packager = "LIVEN Maintainers <team@liven.io>"
doc-files = ["README.md"]
assets = [
    { source = "target/release/liven", dest = "/usr/local/bin/liven", mode = "755" },
    { source = "liven.toml", dest = "/etc/liven/liven.toml", mode = "644", config = true },
    { source = "liven.service", dest = "/usr/lib/systemd/system/liven.service", mode = "644" }
]
post_install = """
# RPM %post installation script
if [ ! -d /var/lib/liven ]; then
    echo "Creating LIVEN data directory with secure permissions (700)..."
    mkdir -p /var/lib/liven
    chmod 700 /var/lib/liven
else
    echo "LIVEN data directory already exists. Preserving existing .liven data blocks."
fi
if [ ! -d /var/log/liven ]; then
    echo "Creating LIVEN log directory with secure permissions (700)..."
    mkdir -p /var/log/liven
    chmod 700 /var/log/liven
fi
systemctl daemon-reload || true
systemctl enable liven || true
"""
pre_uninstall = """
# RPM %preun uninstallation script
if [ "$1" -eq 0 ]; then
    # Complete uninstall (not an upgrade)
    systemctl stop liven || true
    systemctl disable liven || true
fi
"""
post_uninstall = """
# RPM %postun uninstallation script
systemctl daemon-reload || true
"""

