[package]
name = "liven"
version = "0.0.4"
edition = "2024"
license = "SSPL-1.0"
description = "LIVEN is a fast, lightweight database built to capture, store, and stream data in real time."
homepage = "https://livendb.com"
repository = "https://github.com/livendb/liven"
readme = "README.md"
keywords = [
    "database",
    "storage",
    "streaming",
    "embedded",
    "vector-search"
]
categories = [
    "database-implementations",
    "embedded",
    "data-structures",
    "concurrency"
]
[lib]
name = "liven"
path = "src/lib.rs"

[[bin]]
name = "liven"
path = "src/main.rs"

[features]
default = ["full"]
full = ["server", "tui", "tls"]
server = [
    "dep:axum",
    "dep:tower-http",
    "dep:rust-embed",
    "dep:mime_guess",
]
tui = [
    "dep:ratatui",
    "dep:crossterm",
]
tls = [
    "dep:tokio-rustls",
    "dep:rustls-pemfile",
    "dep:x509-parser",
]


[dependencies]
# Always compiled — core database
tokio = { version = "1.38", features = ["full"] }
tokio-util = { version = "0.7.11", features = ["codec"] }
bytes = "1.6"
crossbeam-skiplist = "0.1.3"
ordered-float = { version = "4.2.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "1.3.0"
crc32fast = "1.4.2"
thiserror = "1"
fs2 = "0.4.3"
csv = "1.3.0"
futures-util = { version = "0.3.30", features = ["sink"] }
nom = "7.1.3"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
rand = "0.8.5"
config = { version = "0.14.0", features = ["toml"] }
blake3 = "1.5"
base64 = "0.22.0"

# Server only
axum = { version = "0.7.5", features = ["ws"], optional = true }
tower-http = { version = "0.5.2", features = ["cors", "fs"], optional = true }
rust-embed = { version = "8.4.0", optional = true }
mime_guess = { version = "2.0.4", optional = true }

# TUI only
ratatui = { version = "0.26", optional = true }
crossterm = { version = "0.27", optional = true }

# TLS only
tokio-rustls = { version = "0.26.0", optional = true }
rustls-pemfile = { version = "2.1.0", optional = true }
x509-parser = { version = "0.16.0", optional = true }


[profile.release]
opt-level = 3             # Maximize binary size minimization patterns
lto = true                # Force Link-Time Optimization boundaries across all crates
codegen-units = 1         # Drop compilation speed parallelisms to maximize LTO coverage
panic = "abort"           # Drop stack unwinding metadata strings
strip = true              # Automatically strip out all symbol arrays and debug paths

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.5.0"
tempfile = "3.10"

[[bench]]
name = "engine_bench"
harness = false

[package.metadata.deb]
maintainer = "LIVEN Maintainers <team@livendb.com>"
copyright = "2026, LIVEN Maintainers <team@livendb.com>"
section = "database"
priority = "optional"
assets = [
    ["target/release/liven", "usr/local/bin/liven", "755"],
    ["liven.toml", "etc/liven/liven.toml", "644"],
    ["liven.service", "lib/systemd/system/liven.service", "644"]
]
conf-files = ["/etc/liven/liven.toml"]
maintainer-scripts = "debian"

[package.metadata.generate-rpm]
summary = "LIVEN High-Performance Storage Engine"
description = "High-performance storage engine with ZTNA and mTLS support"
license = "SSPL-1.0"
release = "1"
packager = "LIVEN Maintainers <team@livendb.com>"
assets = [
    { source = "target/release/liven", dest = "/usr/local/bin/liven", mode = "755" },
    { source = "liven.toml", dest = "/etc/liven/liven.toml", mode = "644", config = true },
    { source = "liven.service", dest = "/usr/lib/systemd/system/liven.service", mode = "644" }
]
	conf-files = ["/etc/liven/liven.toml"]
	post_install = """
# RPM %post installation script
if [ ! -d /var/lib/liven ]; then
    echo "Creating LIVEN data directory with secure permissions (700)..."
    mkdir -p /var/lib/liven
    chmod 700 /var/lib/liven
else
    echo "LIVEN data directory already exists. Preserving existing .liven data blocks."
fi
if [ ! -d /var/log/liven ]; then
    echo "Creating LIVEN log directory with secure permissions (700)..."
    mkdir -p /var/log/liven
    chmod 700 /var/log/liven
fi
systemctl daemon-reload || true
systemctl enable liven || true
"""
	pre_uninstall = """
# RPM %preun uninstallation script
if [ "$1" -eq 0 ]; then
    # Complete uninstall (not an upgrade)
    systemctl stop liven || true
    systemctl disable liven || true
fi
"""
	post_uninstall = """
# RPM %postun uninstallation script
systemctl daemon-reload || true
"""

[package.metadata.docs.rs]
features = ["server", "tui", "tls"]
rustdoc-args = ["--cfg", "docsrs"]
